[package]
name = "npb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"

[features]
class_S = ["CLASS"]
class_W = ["CLASS"]
class_A = ["CLASS"]
class_B = ["CLASS"]
class_C = ["CLASS"]
class_D = ["CLASS"]
CLASS = []